# iris-mlflow-serve-testing

./: .gitignore  README.md  databricks.yml  pyproject.toml  train_and_log_the_model.py
pyfunc-lg-pipeline-model/: MLmodel  conda.yaml  python_env.yaml  python_model.pkl  requirements.txt
pyfunc-lg-pipeline-model/code/: iris-0.1.5-py3-none-any.whl
pyfunc-lg-pipeline-model/metadata/: MLmodel  conda.yaml  requirements.txt
tests/: test_mlflow_serve.py
