[project]
name = "iris-mlflow-serve-testing"
version = "0.1.0"
description = "Iris MLflow Serve Testing Framework"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mlflow==2.17.0",
    "virtualenv>=20.30.0",
]

[project.optional-dependencies]
test = [
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pytest>=8.3.5",
    "requests>=2.32.3",
]

[tool.pytest.ini_options]
addopts = "-s --no-header --no-summary"
testpaths = [ "tests" ]
pythonpath = [ "." ]
